--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,15 @@
-theme: jekyll-theme-slate
+html, body, header, #intro {
+    height: 100%;
+    
+}
+
+#intro {
+    background: url("http://chuantu.xyz/t6/740/1597569667x1822611294.jpg") 
+    no-repeat center center fixed;
+    background-size: cover;
+}
+#fucker {
+    background: url("https://colorlib.com/preview/theme/skwela/images/big_image_3.jpg")
+    no-repeat center center fixed;
+    background-size: cover;
+}
